--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,75 @@
 }
 
 body {
-   background: #ffffff;
+   background-color: #fff !important;
+}
+.height-100 {
+   height: 100vh;
+}
+
+.card {
+   width: 100%;
+   border: none;
+   height: 280px;
+   max-width: 380px;
+   overflow: hidden;
+   position: relative;
+   display: flex;
+   cursor: pointer;
+   justify-content: center;
+   transition: all ease 0.4s;
+   /* box-shadow: 0 0 12px rgba(0, 0, 0, 0.3); */
+   margin: 0 auto;
+   border-radius: 25px;
+   background: #e0e0e0;
+   box-shadow: -30px 30px 52px #a6a6a6, 30px -30px 52px #ffffff;
+}
+
+.card img {
+   transition: all ease 0.4s;
+}
+
+.card:hover img {
+   margin-top: -80px;
+}
+
+.card .content {
+   width: 100%;
+   background: #fff;
+   position: absolute;
+   bottom: -60%;
+   margin-left: -8px;
+   transition: all ease 0.5s;
+   border-radius: 4px;
+   box-shadow: 0px -3px 4px rgba(10, 10, 10, 0.09);
+}
+
+.card .content .category {
+   font-size: 17px;
+   font-weight: 600;
+}
+
+.card .content .price {
+   font-size: 17px;
+   font-weight: 500;
+   color: #0d6efd;
+}
+
+.card .content p {
+   font-weight: 500;
+   font-size: 12px;
+}
+
+.card:hover .content {
+   bottom: 0%;
+}
+
+.buttons button {
+   border-radius: 1px;
+   margin-bottom: 10px;
+   transition: all ease 0.3s;
+}
+
+.content {
+   padding: 10px;
 }
