--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,68 @@
-.btn,
-.jumbotron,
-.nav :hover {
-   border-radius: 0px;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 body {
+   font-family: "Roboto";
    background-color: #fff !important;
 }
 .height-100 {
    height: 100vh;
 }
+/* <--------Navigation Bar ---------> */
+nav {
+   width: 100%;
+   height: 48px;
+   background: #333333;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+nav ul {
+   margin-top: 15px;
+   list-style: none;
+   display: flex;
+}
+nav ul li {
+   margin: 0 40px;
+}
+nav ul li Link {
+   font-weight: 100px;
+   color: #adadad;
+}
+nav ul li Link:hover {
+   color: #f5f5f7;
+}
+/* <------------ Banner -----------> */
+.welcome {
+   width: 100%;
+   height: 650px;
+   background-image: url("./images/iphone12-banner.jpeg");
+   background-repeat: no-repeat;
+   background-size: cover;
+   justify-content: center;
+   align-items: center;
+   padding: auto;
+}
+.welcome h1 {
+   margin-top: 20px;
+   color: #000;
+   font-weight: 500;
+   font-size: 4rem;
+}
+.welcome h3 {
+   text-align: center;
+   margin-top: 5px;
+   color: #000;
+   font-weight: 300;
+   font-size: 25px;
+}
+.welcome h4 {
+   text-align: center;
+   margin-top: 2px;
+   color: #1f1f1f;
+   font-weight: 100;
+   font-size: 15px;
+}
+/* <-----------Product Card Style ----------> */
 
 .card {
    width: 100%;
@@ -22,11 +75,9 @@ body {
    cursor: pointer;
    justify-content: center;
    transition: all ease 0.4s;
-   /* box-shadow: 0 0 12px rgba(0, 0, 0, 0.3); */
    margin: 0 auto;
    border-radius: 25px;
-   background: #e0e0e0;
-   box-shadow: -30px 30px 52px #a6a6a6, 30px -30px 52px #ffffff;
+   background: #f1f1f1;
 }
 
 .card img {
@@ -76,4 +127,121 @@ body {
 
 .content {
    padding: 10px;
+}
+
+/*<------- footer --------->*/
+footer {
+   text-decoration: none;
+   width: 100%;
+   height: 500px;
+   background: #f1f1f1;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+.footer-main {
+   width: 1070px;
+}
+.footer-detail {
+   font-size: 0.7rem;
+   color: #95a5a6;
+   padding: 10px 0;
+   border-bottom: 1px solid #bdc3c7;
+}
+.footer-detail a {
+   text-decoration: none;
+   color: #2c3e50;
+}
+.footer-detail a:hover {
+   text-decoration: underline;
+}
+.footer-welcome {
+   display: flex;
+   margin: 15px 0;
+   font-size: 0.8rem;
+   color: #34495e;
+}
+.footer-welcome i {
+   margin-right: 10px;
+}
+.footer-ul {
+   display: flex;
+   justify-content: space-between;
+}
+.footer-ul ul {
+   list-style: none;
+}
+.footer-ul ul li {
+   margin: 7px 0;
+}
+.footer-ul ul li h4 {
+   color: #34495e;
+   font-size: 0.7rem;
+}
+.footer-ul ul li a {
+   text-decoration: none;
+   color: #7f8c8d;
+   font-size: 0.7rem;
+}
+.footer-ul ul li a:hover {
+   text-decoration: underline;
+}
+#mt {
+   padding-top: 10px;
+}
+.footer-contact {
+   border-bottom: 1px solid #bdc3c7;
+   padding: 12px 0;
+   margin: 10px 0;
+   color: #7f8c8d;
+   font-size: 0.7rem;
+}
+.footer-contact a {
+   text-decoration: none;
+   color: #3498db;
+}
+.footer-contact a:hover {
+   text-decoration: underline;
+}
+.footer-copyright {
+   color: #7f8c8d;
+   font-size: 0.7rem;
+   display: flex;
+   justify-content: space-between;
+}
+.footer-copyright ul {
+   display: flex;
+   list-style: none;
+   width: auto;
+}
+.footer-copyright ul li {
+   margin: 0 10px;
+}
+.footer-copyright ul li a {
+   text-decoration: none;
+   color: #7f8c8d;
+}
+.footer-copyright ul li a:hover {
+   text-decoration: underline;
+}
+.vr {
+   height: 15px;
+   width: 1px;
+   background: #bdc3c7;
+}
+.footer-lang {
+   display: flex;
+}
+.footer-lang p {
+   margin: 0 10px;
+}
+.circle {
+   width: 15px;
+   height: 15px;
+}
+.circle img {
+   width: 100%;
+   height: 100%;
+   background-size: cover;
+   border-radius: 50%;
 }
