--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
-
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
 body {
    font-family: "Roboto";
    background-color: #fff !important;
@@ -9,41 +13,39 @@ body {
 }
 /* <--------Navigation Bar ---------> */
 nav {
-   width: 100%;
-   height: 48px;
-   background: #333333;
-   display: flex;
    justify-content: center;
+   width: 100%;
+   height: 60px;
+   background: #333333;
    align-items: center;
+   position: center;
 }
-nav ul {
-   margin-top: 15px;
-   list-style: none;
-   display: flex;
+.navbar-brand {
+   margin: auto;
+}
+.dropdown-menu {
+   background: #333333;
+}
+ul.navbar-nav {
+   background: #333333;
 }
 nav ul li {
    margin: 0 40px;
 }
-nav ul li Link {
-   font-weight: 100px;
-   color: #adadad;
-}
-nav ul li Link:hover {
-   color: #f5f5f7;
-}
+
 /* <------------ Banner -----------> */
 .welcome {
    width: 100%;
    height: 650px;
    background-image: url("./images/iphone12-banner.jpeg");
+   background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    justify-content: center;
    align-items: center;
-   padding: auto;
 }
 .welcome h1 {
-   margin-top: 20px;
+   padding-top: 10px;
    color: #000;
    font-weight: 500;
    font-size: 4rem;
@@ -61,6 +63,20 @@ nav ul li Link:hover {
    color: #1f1f1f;
    font-weight: 100;
    font-size: 15px;
+}
+@media screen and (min-width: 0px) and (max-width: 800px) {
+   .welcome {
+      width: 100%;
+      height: 700px;
+      background-image: url("./images/iphone12-banner-mobile.jpeg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      justify-content: center;
+      align-items: center;
+      padding: auto;
+      text-align: center;
+   }
 }
 /* <-----------Product Card Style ----------> */
 
@@ -244,4 +260,43 @@ footer {
    height: 100%;
    background-size: cover;
    border-radius: 50%;
+}
+@media screen and (min-width: 0px) and (max-width: 500px) {
+   footer {
+      text-decoration: none;
+      width: 100%;
+      height: auto;
+      background: #f1f1f1;
+      text-align: left;
+   }
+   footer p {
+      margin-left: 10px;
+   }
+   .footer-main {
+      width: 100%;
+   }
+   .footer-welcome {
+      display: none;
+   }
+   .footer-ul {
+      display: none;
+   }
+
+   .footer-contact {
+      display: none;
+   }
+
+   .footer-copyright {
+      display: none;
+   }
+
+   .vr {
+      display: none;
+   }
+   .footer-lang {
+      display: none;
+   }
+   .circle {
+      display: none;
+   }
 }
