--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
 }
 /* <--------Navigation Bar ---------> */
 nav {
+   z-index: 1;
    justify-content: center;
    width: 100%;
    height: 60px;
@@ -22,6 +23,11 @@ nav {
 }
 .navbar-brand {
    margin: auto;
+}
+@media screen and (min-width: 768px) {
+   .navbar-brand {
+      display: none;
+   }
 }
 .dropdown-menu {
    background: #333333;
