--- a/src/style.css
+++ b/src/style.css
@@ -71,14 +71,14 @@ nav ul li {
    font-weight: 100;
    font-size: 15px;
 }
-@media screen and (min-width: 0px) and (max-width: 800px) {
+@media screen and (min-width: 0px) and (max-width: 768px) {
    .welcome {
       width: 100%;
       height: 700px;
       background-image: url("./images/iphone12-banner-mobile.jpeg");
       background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: 100% 90%;
       justify-content: center;
       align-items: center;
       padding: auto;
