--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 body {
    font-family: "Roboto";
    background-color: #fff !important;
+   overflow-x: hidden;
 }
 .height-100 {
    height: 100vh;
