--- a/src/core/css/card-style.css
+++ b/src/core/css/card-style.css
@@ -13,7 +13,7 @@
    transition: all ease 0.4s;
    margin: 0 auto;
    border-radius: 25px;
-   background: #f1f1f1;
+   background: #fff;
 }
 
 .product-card img {
